# pozarcal

./: .gitignore  CMakeLists.txt  FireGrid.h  FuelModel.h  README.md  Rothermel.h  RothermelInput.h  burn_times.csv  compile_commands.json  main.cpp  visualize_burn.py
